Add optional comment about Passenger activity along Apache/Nginx

--- a/apache-passenger-off-for-subdir/httpd/conf/webapp.conf
+++ b/apache-passenger-off-for-subdir/httpd/conf/webapp.conf
@@ -10,7 +10,7 @@
     <Directory /home/app/ror/public>
         AllowOverride All
         Require all granted
-        PassengerEnabled on
+        #PassengerEnabled on # optional, on by default
         RailsEnv development
     </Directory>
 
@@ -19,7 +19,7 @@
     <Directory "/home/app/lara/public">
         AllowOverride All
         Require all granted
-        PassengerEnabled off
+        PassengerEnabled off # necessary, on by default
     </Directory>
     <IfModule mod_rewrite.c>
         <IfModule mod_negotiation.c>
