--- a/nginx-passenger-off-for-subdir/nginx/nginx.conf
+++ b/nginx-passenger-off-for-subdir/nginx/nginx.conf
@@ -45,13 +45,13 @@ http {
         location / {
             root /home/app/ror/public;
             index  index.html index.htm;
-            passenger_enabled on;
+            passenger_enabled on; # necessary, off by default
             passenger_user www-data;
             passenger_app_env development;
         }
 
         location /laravel {
-            #passenger_enabled on;
+            #passenger_enabled off; # optional, off by default
             alias /home/app/lara/public;
             index index.php index.html index.htm;
 
